# rust-zmq

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  HACKING.md  LICENSE-MIT  Makefile  NEWS.md  README  README.markdown  README.md  aliases.js  build.rs  build.sh  example.rs  index.html  lib.rs  msgsend-zmq.rs  rust-ubuntu.Dockerfile  rustzmq.c  search-index.js  shippable.yml  test.rs  zmq.rc  zmq.rs  zmqstubs.c
.appveyor/: appveyor.bat
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml
bitflags/: index.html  macro.bitflags.html
examples/: async_smol.rs
examples/arcex/: main.rs
examples/msgsend/: main.rs
examples/stream/: logserver.rs
examples/zguide/: README.md
examples/zguide/asyncsrv/: main.rs
examples/zguide/fileio3/: main.rs
examples/zguide/helloworld-client/: main.rs
examples/zguide/helloworld-server/: main.rs
examples/zguide/helloworld_client/: main.rs
examples/zguide/helloworld_server/: main.rs
examples/zguide/lbbroker/: main.rs
examples/zguide/lvcache/: main.rs
examples/zguide/monitor/: main.rs
examples/zguide/msgqueue/: main.rs
examples/zguide/mspoller/: main.rs
examples/zguide/msreader/: main.rs
examples/zmqstream/: logserver.rs
implementors/zmq/: trait.Sendable.js
log/: all.html  enum.Level.html  enum.LevelFilter.html  fn.set_boxed_logger.html  fn.set_logger.html  index.html  sidebar-items.js  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
msrv-test/: Cargo.toml
msrv-test/src/: main.rs
src/: dlsym.rs  lib.rs  message.rs  sockopt.rs
src/bitflags/: lib.rs.html
src/zmq/: lib.rs  lib.rs.html  message.rs.html  sockopt.rs.html
src/zmq_sys/: errno.rs.html  ffi.rs.html  lib.rs.html  unix.rs.html
tests/: compile-tests.rs  connection.rs  context.rs  curve.rs  error.rs  gssapi.rs  has.rs  message.rs  message_from_boxed_slice.rs  monitor.rs  poll.rs  shared-context.rs  test.rs  z85.rs
tests/common/: mod.rs
tests/compile-fail/: no-leaking-poll-items.rs  no-leaking-poll-items.stderr  socket-thread-unsafe.rs  socket-thread-unsafe.stderr
tests/connection/: unix.rs
tests/poll/: unix.rs
tests/unix/: connection.rs
zguide/: .gitignore  hwclient.rs  hwserver.rs  version.rs  wuclient.rs  wuserver.rs
zmq/: CurveKeyPair.t.html  DONTWAIT.v.html  EncodeError.t.html  Mechanism.t.html  PollEvents.t.html  PollItem.t.html  SNDMORE.v.html  Sendable.t.html  Socket.t.html  SocketType.t.html  all.html  constant.POLLERR.html  constant.POLLIN.html  constant.POLLOUT.html  enum.DecodeError.html  enum.EncodeError.html  enum.Error.html  enum.Mechanism.html  enum.SocketType.html  fn.has.html  fn.poll.html  fn.proxy.html  fn.proxy_with_capture.html  fn.version.html  fn.z85_decode.html  fn.z85_encode.html  has.v.html  index.html  proxy.v.html  proxy_with_capture.v.html  sidebar-items.js  static.DONTWAIT.html  static.SNDMORE.html  struct.Context.html  struct.CurveKeyPair.html  struct.Message.html  struct.PollEvents.html  struct.PollItem.html  struct.Socket.html  trait.Sendable.html  (+3 more)
zmq-has/: Cargo.toml  build.rs
zmq-has/examples/: print.rs
zmq-has/src/: lib.rs
zmq-pw-sys/: Cargo.toml  build.rs
zmq-pw-sys/src/: ffi.rs  lib.rs
zmq-sys/: Cargo.toml  build.rs  win_set_environment_vars.bat  win_source_dll_path.bat
zmq-sys/src/: errno.rs  ffi.rs  lib.rs  unix.rs  win_errno.rs  windows.rs
zmq/message/: struct.Message.html
zmq_sys/: RawFd.t.html  all.html  fn.zmq_bind.html  fn.zmq_close.html  fn.zmq_connect.html  fn.zmq_ctx_destroy.html  fn.zmq_ctx_get.html  fn.zmq_ctx_new.html  fn.zmq_ctx_set.html  fn.zmq_ctx_shutdown.html  fn.zmq_ctx_term.html  fn.zmq_curve_keypair.html  fn.zmq_device.html  fn.zmq_disconnect.html  fn.zmq_errno.html  fn.zmq_getsockopt.html  fn.zmq_has.html  fn.zmq_init.html  fn.zmq_msg_close.html  fn.zmq_msg_copy.html  fn.zmq_msg_data.html  fn.zmq_msg_get.html  fn.zmq_msg_gets.html  fn.zmq_msg_init.html  fn.zmq_msg_init_data.html  fn.zmq_msg_init_size.html  fn.zmq_msg_more.html  fn.zmq_msg_move.html  fn.zmq_msg_recv.html  fn.zmq_msg_send.html  fn.zmq_msg_set.html  fn.zmq_msg_size.html  fn.zmq_poll.html  fn.zmq_proxy.html  fn.zmq_proxy_steerable.html  fn.zmq_recv.html  fn.zmq_recviov.html  fn.zmq_recvmsg.html  fn.zmq_send.html  fn.zmq_send_const.html  (+47 more)
zmq_sys/errno/: EFSM.v.html  EMTHREAD.v.html  ENOCOMPATPROTO.v.html  ETERM.v.html  constant.EACCES.html  constant.EADDRINUSE.html  constant.EADDRNOTAVAIL.html  constant.EAGAIN.html  constant.EBUSY.html  constant.ECONNREFUSED.html  constant.EFAULT.html  constant.EFSM.html  constant.EHOSTUNREACH.html  constant.EINPROGRESS.html  constant.EINTR.html  constant.EINVAL.html  constant.EMFILE.html  constant.EMSGSIZE.html  constant.EMTHREAD.html  constant.ENAMETOOLONG.html  constant.ENETDOWN.html  constant.ENOBUFS.html  constant.ENOCOMPATPROTO.html  constant.ENODEV.html  constant.ENOENT.html  constant.ENOMEM.html  constant.ENOTCONN.html  constant.ENOTSOCK.html  constant.ENOTSUP.html  constant.EPROTO.html  constant.EPROTONOSUPPORT.html  constant.ETERM.html  index.html  sidebar-items.js
zmq_sys/ffi/: fn.zmq_bind.html  fn.zmq_close.html  fn.zmq_connect.html  fn.zmq_ctx_destroy.html  fn.zmq_ctx_get.html  fn.zmq_ctx_new.html  fn.zmq_ctx_set.html  fn.zmq_ctx_shutdown.html  fn.zmq_ctx_term.html  fn.zmq_curve_keypair.html  fn.zmq_device.html  fn.zmq_disconnect.html  fn.zmq_errno.html  fn.zmq_getsockopt.html  fn.zmq_has.html  fn.zmq_init.html  fn.zmq_msg_close.html  fn.zmq_msg_copy.html  fn.zmq_msg_data.html  fn.zmq_msg_get.html  fn.zmq_msg_gets.html  fn.zmq_msg_init.html  fn.zmq_msg_init_data.html  fn.zmq_msg_init_size.html  fn.zmq_msg_more.html  fn.zmq_msg_move.html  fn.zmq_msg_recv.html  fn.zmq_msg_send.html  fn.zmq_msg_set.html  fn.zmq_msg_size.html  fn.zmq_poll.html  fn.zmq_proxy.html  fn.zmq_proxy_steerable.html  fn.zmq_recv.html  fn.zmq_recviov.html  fn.zmq_recvmsg.html  fn.zmq_send.html  fn.zmq_send_const.html  fn.zmq_sendiov.html  fn.zmq_sendmsg.html  (+49 more)
zmq_sys/imp/: type.RawFd.html
(+60 files in other folders)
