[package]
name = "zmq"
version = "0.8.0"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "High-level bindings to the zeromq library"
keywords = ["bindings", "protocol"]
repository = "https://github.com/erickt/rust-zmq"
readme = "README.md"
build = "build.rs"

[[example]]
name = "helloworld_client"
path = "examples/zguide/helloworld_client/main.rs"

[[example]]
name = "helloworld_server"
path = "examples/zguide/helloworld_server/main.rs"

[[example]]
name = "msreader"
path = "examples/zguide/msreader/main.rs"

[[example]]
name = "pathopub"
path = "examples/zguide/pathopub/main.rs"

[[example]]
name = "pathosub"
path = "examples/zguide/pathosub/main.rs"

[[example]]
name = "lvcache"
path = "examples/zguide/lvcache/main.rs"

[[example]]
name = "msgsend"
path = "examples/msgsend/main.rs"

[[example]]
name = "stream-logserver"
path = "examples/stream/logserver.rs"

[[example]]
name = "tasksink"
path = "examples/zguide/tasksink/main.rs"

[[example]]
name = "taskvent"
path = "examples/zguide/taskvent/main.rs"

[[example]]
name = "taskwork"
path = "examples/zguide/taskwork/main.rs"

[[example]]
name = "version"
path = "examples/zguide/version/main.rs"

[[example]]
name = "weather_client"
path = "examples/zguide/weather_client/main.rs"

[[example]]
name = "weather_server"
path = "examples/zguide/weather_server/main.rs"

[features]
unstable = []
default = ["zmq_has"]
zmq_has = [] # zmq_has was added in zeromq 4.1.
unstable-testing = ["compiletest_rs", "unstable"]
#unstable-testing = ["clippy", "compiletest_rs", "unstable"]

[[example]]
name = "rtdealer"
path = "examples/zguide/rtdealer/main.rs"

[[example]]
name = "fileio3"
path = "examples/zguide/fileio3/main.rs"

[dependencies]
libc = "0.2.15"
log = "0.3.6"
zmq-sys = { version = "0.8.0", path = "zmq-sys" }
compiletest_rs = { version = "0.*", optional = true }
clippy = { version = "0.*", optional = true }

[build-dependencies]
zmq-sys = { version = "0.8.0", path = "zmq-sys" }

[dev-dependencies]
quickcheck = "0.4.0"
rand = "0.3"
tempfile = "2.1"
timebomb = "0.1.2"
