[package]
name = "zmq-pw-sys"
version = "0.9.0"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
repository = "https://github.com/evernym/rust-zmq-pw"
build = "build.rs"
links = "zmq-pw"

[dependencies]
libc = "0.2.15"

[build-dependencies]
metadeps = "1"
pkg-config = "0.3.9"

[package.metadata.pkg-config]
libzmq-pw = "3.2"
