[package]
name = "zmq-sys"
version = "0.11.0"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/erickt/rust-zmq"
build = "build/main.rs"
links = "zmq"

[features]

[dependencies]
libc = "0.2.15"
libsodium-sys-stable = { version = "1.0" }

[build-dependencies]
system-deps = "6"
zeromq-src = { version = "0.2.0" }

[package.metadata.system-deps]
libzmq = "4.1"
