[package]
name = "zmq-sys"
version = "0.12.0-jito.1"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/erickt/rust-zmq"
build = "build/main.rs"
links = "zmq"

[features]
libsodium = ["libsodium-sys-stable"]

[dependencies]
libsodium-sys-stable = { version = "1.0", optional = true}
libc = "0.2.15"

[build-dependencies]
system-deps = "6"
zeromq-src = "0.3.2+4.3.5"

[package.metadata.system-deps]
libzmq = "4.1"
